--- a/styles/portfolio1.css
+++ b/styles/portfolio1.css
@@ -77,14 +77,19 @@ nav li {
 }
 
 /* main section */
+
 main {
     max-width: 1140px;
     margin: 0 auto;
 }
 
+.section{
+    margin-top: 130px;
+
+}
 /* about section styles */
 .about {
-    margin-top: 130px;
+    
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -93,7 +98,8 @@ main {
 }
 
 .section-title {
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
@@ -120,4 +126,31 @@ main {
     font-size: 20px;
     color: #474747;
 }
+
 /* what i do */
+
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+/* summary of resume styles */
