--- a/styles/portfolio1.css
+++ b/styles/portfolio1.css
@@ -83,13 +83,14 @@ main {
     margin: 0 auto;
 }
 
-.section{
+.section {
     margin-top: 130px;
 
 }
+
 /* about section styles */
 .about {
-    
+
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -153,4 +154,37 @@ main {
 .skill-description {
     color: #757575;
 }
+
 /* summary of resume styles */
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume .title {
+    color: #474747;
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.resume .sub-title {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+
+.resume .description {
+    color: #757575;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+
+}
